--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,110 @@
 :root {
-    --primary-color:silver;
-    --secondary-color:rgba(0, 0, 255, 0.76);
-    --tertiary-color:grey;
+    --primary-color:rgb(30, 35, 99);
+    --secondary-color:silver;
+    --tertiary-color:rgba(245, 245, 245, 0.801);
 }
 
- * {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    color: var(--primary-color);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+
+header {
+    background-color: var(--tertiary-color);
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 20px 35px;
+    text-shadow: 0 0 12px rgba(255, 255, 255, 1.0);
+    top:0;
+    position: sticky;
+    background-image: url(../images/lightning-bolt.jpeg);
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 80%;
+    z-index: 9999;
+}
+header h1 {
+    font-weight:lighter;
+    font-style: italic;
+    font-size: 30px;
+    color: var(--secondary-color);
+}
+
+header a {
+    text-decoration: none;
+    color: var(--primary-color);
+}
+
+header nav {
+    margin:8px 0;
+}
+
+header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+}
+
+header nav ul li a {
+    font-weight: lighter;
+    font-size: 1.65vw;
+    padding: 10px 15px;
+    text-shadow: 0 0 12px rgba(255, 255, 255, 1.0);
+}
+
+header nav ul li a:hover {
+    font-weight: lighter;
+    font-size: 1.65vw;
+    padding: 10px 15px;
+    text-shadow: 0 0 12px rgba(255, 255, 255, 1.5);
+}
+
+main {
+    background-color: var(--secondary-color);
+}
+
+footer {
+    background-color: var(--primary-color);
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    border: 3px solid var(--secondary-color);
+    padding-bottom: 40px;
+}
+
+footer h4 {
+    color: var(--secondary-color);
+    text-shadow: 0 2 12px rgba(255, 255, 255, 0.5);
+    text-align: center;
+}
+
+section {
+    padding: 50px;
+}
+
+/* Hero Section Style Start */
+.hero {
+    background-image: url(../images/lightning-bolt.jpeg);
+    background-size: cover;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    background-attachment: fixed;
+    background-position: 80%;
+    height: 500px;
+}
+
+.hero h1 {
+    text-align: right;
+    text
 }
