--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color:rgb(30, 35, 99);
     --secondary-color:silver;
-    --tertiary-color:rgba(245, 245, 245, 0.801);
+    --tertiary-color:rgba(30, 35, 99, 0.575);
 }
 
 * {
@@ -11,12 +11,12 @@
 }
 
 body {
+    background-color: var(--secondary-color);
     color: var(--primary-color);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
 header {
-    background-color: var(--tertiary-color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -27,7 +27,7 @@ header {
     background-image: url(../images/lightning-bolt.jpeg);
     background-size: cover;
     background-attachment: fixed;
-    background-position: 80%;
+    background-position: 100%;
     z-index: 9999;
 }
 header h1 {
@@ -68,10 +68,6 @@ header nav ul li a:hover {
     text-shadow: 0 0 12px rgba(255, 255, 255, 1.5);
 }
 
-main {
-    background-color: var(--secondary-color);
-}
-
 footer {
     background-color: var(--primary-color);
     width: 100%;
@@ -98,13 +94,96 @@ section {
     background-size: cover;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     align-items: flex-start;
     background-attachment: fixed;
-    background-position: 80%;
+    background-position: 100%;
     height: 500px;
 }
+/* Hero Section Style End */
 
-.hero h1 {
-    text-align: right;
-    text
+/* Main Sectin Style Start */
+/* About Me Section Style Start */
+.about-me {
+    line-height: 1.5;
+    width: 100%;
+    margin: 2px auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
+
+.about-me-text {
+    align-content: flex-start;
+    padding-left: 100px;
+    text-align: center;
+}
+/* About Me Section Style End */
+/* Work Section Style Start */
+.work {
+    width: 100%;
+    margin: 2px auto;
+    border: 4px solid white;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.section-title {
+    font-size: 25px;
+    position: absolute;
+    left: 7px;
+    border-right: 4px solid  white;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.flex-row {
+    display: flex;
+}
+
+
+
