--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,189 +1,159 @@
 :root {
-    --primary-color:rgb(30, 35, 99);
-    --secondary-color:silver;
-    --tertiary-color:rgba(30, 35, 99, 0.575);
+  --primary-color:rgb(30, 35, 99);
+  --secondary-color:silver;
+  --first-background: aliceblue;
+  --second-background:rgb(255, 255, 255);
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: var(--secondary-color);
-    color: var(--primary-color);
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+  background-color: var(--second-background);
+  color: var(--primary-color);
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
 header {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 20px 35px;
-    text-shadow: 0 0 12px rgba(255, 255, 255, 1.0);
-    top:0;
-    position: sticky;
-    background-image: url(../images/lightning-bolt.jpeg);
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: 100%;
-    z-index: 9999;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 20px 35px;
+  text-shadow: 0 0 12px rgba(255, 255, 255, 1.0);
+  top:0;
+  position: sticky;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: 100%;
+  z-index: 9999;
 }
 header h1 {
-    font-weight:lighter;
-    font-style: italic;
-    font-size: 30px;
-    color: var(--secondary-color);
+  font-weight:lighter;
+  font-style: italic;
+  font-size: 30px;
+  color: var(--secondary-color);
 }
 
 header a {
-    text-decoration: none;
-    color: var(--primary-color);
+  text-decoration: none;
+  color: var(--primary-color);
 }
 
 header nav {
-    margin:8px 0;
+  margin:8px 0;
 }
 
 header nav ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
 }
 
 header nav ul li a {
-    font-weight: lighter;
-    font-size: 1.65vw;
-    padding: 10px 15px;
-    text-shadow: 0 0 12px rgba(255, 255, 255, 1.0);
+  font-weight: lighter;
+  font-size: 1.65vw;
+  padding: 10px 15px;
+  text-shadow: 0 0 12px rgba(255, 255, 255, 1.0);
 }
 
 header nav ul li a:hover {
-    font-weight: lighter;
-    font-size: 1.65vw;
-    padding: 10px 15px;
-    text-shadow: 0 0 12px rgba(255, 255, 255, 1.5);
+  font-weight: lighter;
+  font-size: 1.65vw;
+  padding: 10px 15px;
+  text-shadow: 0 0 12px rgba(255, 255, 255, 1.5);
 }
 
 footer {
-    background-color: var(--primary-color);
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    border: 3px solid var(--secondary-color);
-    padding-bottom: 40px;
+  background-image: url(../images/lightening\ image\ 2.jpeg);
+  background-size: cover;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding-bottom: 20px;
 }
 
 footer h4 {
-    color: var(--secondary-color);
-    text-shadow: 0 2 12px rgba(255, 255, 255, 0.5);
-    text-align: center;
+  color: var(--second-background);
+  text-align: center;
 }
 
 section {
-    padding: 50px;
+  padding: 50px;
 }
 
 /* Hero Section Style Start */
 .hero {
-    background-image: url(../images/lightning-bolt.jpeg);
-    background-size: cover;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: flex-start;
-    background-attachment: fixed;
-    background-position: 100%;
-    height: 500px;
+  background-image: url(../images/lightening\ image\ 2.jpeg);
+  background-size: cover;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  background-attachment: fixed;
+  background-position: 100%;
+  height: 100px;
 }
 /* Hero Section Style End */
 
 /* Main Sectin Style Start */
 /* About Me Section Style Start */
 .about-me {
-    line-height: 1.5;
-    width: 100%;
-    margin: 2px auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  line-height: 1.5;
+  width: 100%;
+  margin: 2px auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  background-color: var(--first-background);
 }
 
 .about-me-text {
-    align-content: flex-start;
-    padding-left: 100px;
-    text-align: center;
+  padding-left: 50px;
+  text-align: center;
+  border-left: 4px solid  rgb(3, 0, 0);
 }
 /* About Me Section Style End */
 /* Work Section Style Start */
 .work {
-    width: 100%;
-    margin: 2px auto;
-    border: 4px solid white;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  line-height: 1.5;
+  width: 100%;
+  margin: 2px auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
-.section-title {
-    font-size: 25px;
-    position: absolute;
-    left: 7px;
-    border-right: 4px solid  white;
+.screenshot {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  block-size: 400px;
+}
+.section-title h2 {
+  font-size: 55px;
+  color: var(--primary-color);
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.flex-row {
-    display: flex;
+.content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
+/* Contact Start */
+.contact {
+  line-height: 1.5;
+  width: 100%;
+  margin: 2px auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  background-color: var(--first-background);
 
-
+}
