--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,12 +69,8 @@ header nav ul li a:hover {
 }
 
 footer {
-  background-image: url(../images/lightening\ image\ 2.jpeg);
-  background-size: cover;
+  background: var(--primary-color);
   width: 100%;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
   padding-bottom: 20px;
 }
 
@@ -89,7 +85,7 @@ section {
 
 /* Hero Section Style Start */
 .hero {
-  background-image: url(../images/lightening\ image\ 2.jpeg);
+  background-image: url(../images/lightning\ wallpaper.jpeg);
   background-size: cover;
   display: flex;
   flex-wrap: wrap;
@@ -98,6 +94,10 @@ section {
   background-attachment: fixed;
   background-position: 100%;
   height: 100px;
+}
+
+.name {
+  display: inline-block;
 }
 /* Hero Section Style End */
 
@@ -124,20 +124,20 @@ section {
   line-height: 1.5;
   width: 100%;
   margin: 2px auto;
-  display: flex;
-  flex-wrap: wrap;
   justify-content: space-around;
 }
 
 .screenshot {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: wrap-reverse;
   justify-content: space-between;
-  block-size: 400px;
+  max-width: 100%;
+  margin: 10px auto;
 }
 .section-title h2 {
   font-size: 55px;
   color: var(--primary-color);
+  text-align: center;
 }
 
 .content {
@@ -153,7 +153,7 @@ section {
   margin: 2px auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
   background-color: var(--first-background);
 
 }
