--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,6 @@
 }
 
 body {
-  background-color: var(--second-background);
-  color: var(--primary-color);
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
@@ -24,7 +22,6 @@ header {
   padding: 20px 35px;
   text-shadow: 0 0 12px rgba(255, 255, 255, 1.0);
   top:0;
-  position: sticky;
   background-size: cover;
   background-attachment: fixed;
   background-position: 100%;
@@ -39,7 +36,7 @@ header h1 {
 
 header a {
   text-decoration: none;
-  color: var(--primary-color);
+  color: var(--second-background);
 }
 
 header nav {
@@ -85,15 +82,14 @@ section {
 
 /* Hero Section Style Start */
 .hero {
-  background-image: url(../images/lightning\ wallpaper.jpeg);
+  background-image: url(../images/wallpaper\ 2.jpeg);
   background-size: cover;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   align-items: flex-start;
   background-attachment: fixed;
   background-position: 100%;
-  height: 100px;
+  height: 150px;
 }
 
 .name {
@@ -103,7 +99,7 @@ section {
 
 /* Main Sectin Style Start */
 /* About Me Section Style Start */
-.about-me {
+#about-me {
   line-height: 1.5;
   width: 100%;
   margin: 2px auto;
@@ -113,14 +109,14 @@ section {
   background-color: var(--first-background);
 }
 
-.about-me-text {
+#about-me-text {
   padding-left: 50px;
   text-align: center;
   border-left: 4px solid  rgb(3, 0, 0);
 }
 /* About Me Section Style End */
 /* Work Section Style Start */
-.work {
+#work {
   line-height: 1.5;
   width: 100%;
   margin: 2px auto;
@@ -145,15 +141,15 @@ section {
   flex-wrap: wrap;
   justify-content: space-around;
 }
+/* Work Section End */
 
 /* Contact Start */
-.contact {
-  line-height: 1.5;
+#contact-me {
   width: 100%;
   margin: 2px auto;
-  display: flex;
+  display: inline-flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   background-color: var(--first-background);
-
 }
+/* Contact End */
