--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,20 +102,21 @@ footer h4 {
   border-radius: 10px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
   background-color: var(--main-background);
 }
 
 #about-me-text {
   border-left: 3px solid var(--secondary-background);
   padding-left: 15px;
+  font-size: 20px;
 }
 
-
 .my-image {
-  max-height: 600px;
+  max-height: 400px;
   border-radius: 10px;
-  margin-left: 53px;
+  margin-left: 140px;
+  width: 600px;
 }
 /* About Me Section Style End */
 /* Work Section Style Start */
@@ -139,15 +140,11 @@ footer h4 {
   margin: 10px auto;
 }
 .section-title h2 {
-  font-size: 55px;
+  font-size: 45px;
   writing-mode: vertical-lr;
   text-orientation: upright;
   color: var(--accents);
   letter-spacing: -20px;
-}
-
-.section-title p {
-  font-size: 25px;
 }
 
 .content {
